--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -166,8 +166,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="842"/>
-        <CursorPos Y="861"/>
+        <TopLine Value="972"/>
+        <CursorPos X="36" Y="997"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -184,7 +184,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="143"/>
+        <UsageCount Value="142"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
@@ -192,8 +192,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="821"/>
-        <CursorPos Y="852"/>
+        <TopLine Value="855"/>
+        <CursorPos Y="880"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -272,8 +272,8 @@
         <UnitName Value="MemoVersiculo"/>
         <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="21"/>
-        <CursorPos X="27" Y="73"/>
+        <TopLine Value="85"/>
+        <CursorPos X="29" Y="110"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -283,7 +283,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="16"/>
+        <UsageCount Value="15"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -374,7 +374,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="56"/>
+        <UsageCount Value="55"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
@@ -393,8 +393,8 @@
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="261"/>
-        <CursorPos Y="249"/>
+        <TopLine Value="231"/>
+        <CursorPos Y="256"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit21>
@@ -404,8 +404,8 @@
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="673"/>
-        <CursorPos Y="692"/>
+        <TopLine Value="701"/>
+        <CursorPos X="17" Y="735"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -416,129 +416,129 @@
         <WindowIndex Value="1"/>
         <TopLine Value="383"/>
         <CursorPos X="3" Y="396"/>
-        <UsageCount Value="9"/>
+        <UsageCount Value="8"/>
       </Unit23>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="87" Column="36" TopLine="69"/>
+        <Caret Line="969" Column="12" TopLine="947"/>
       </Position1>
       <Position2>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="460" TopLine="436"/>
+        <Caret Line="85" Column="24" TopLine="71"/>
       </Position2>
       <Position3>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="61" Column="36" TopLine="44"/>
+        <Caret Line="807" Column="31" TopLine="775"/>
       </Position3>
       <Position4>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="343" Column="3" TopLine="335"/>
+        <Caret Line="939" Column="12" TopLine="908"/>
       </Position4>
       <Position5>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1019" TopLine="1000"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="876" Column="74" TopLine="871"/>
       </Position5>
       <Position6>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1027" TopLine="1000"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="868" Column="47" TopLine="849"/>
       </Position6>
       <Position7>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="1015" Column="2" TopLine="1000"/>
+        <Caret Line="1003" Column="25" TopLine="976"/>
       </Position7>
       <Position8>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="70" Column="15" TopLine="53"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="212" Column="5" TopLine="183"/>
       </Position8>
       <Position9>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="991" Column="20" TopLine="971"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="87" Column="15" TopLine="70"/>
       </Position9>
       <Position10>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="989" TopLine="971"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="356" Column="23" TopLine="345"/>
       </Position10>
       <Position11>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="68" Column="15" TopLine="51"/>
+        <Caret Line="64" Column="15" TopLine="47"/>
       </Position11>
       <Position12>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="951" TopLine="955"/>
+        <Caret Line="855" Column="3" TopLine="850"/>
       </Position12>
       <Position13>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="990" TopLine="958"/>
+        <Caret Line="87" Column="15" TopLine="69"/>
       </Position13>
       <Position14>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="991" TopLine="959"/>
+        <Caret Line="891" Column="29" TopLine="878"/>
       </Position14>
       <Position15>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="992" TopLine="960"/>
+        <Caret Line="977" Column="24" TopLine="945"/>
       </Position15>
       <Position16>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="440" TopLine="421"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="992" Column="26" TopLine="960"/>
       </Position16>
       <Position17>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="441" TopLine="421"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="28" Column="30" TopLine="9"/>
       </Position17>
       <Position18>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="415" TopLine="396"/>
+        <Caret Line="627" Column="3" TopLine="625"/>
       </Position18>
       <Position19>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="416" TopLine="396"/>
+        <Caret Line="701" Column="16" TopLine="669"/>
       </Position19>
       <Position20>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="991" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="703" Column="23" TopLine="671"/>
       </Position20>
       <Position21>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="992" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="708" Column="23" TopLine="676"/>
       </Position21>
       <Position22>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="991" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="713" Column="24" TopLine="681"/>
       </Position22>
       <Position23>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="992" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="719" Column="52" TopLine="701"/>
       </Position23>
       <Position24>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="993" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="721" Column="26" TopLine="701"/>
       </Position24>
       <Position25>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="992" Column="12" TopLine="970"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="724" Column="59" TopLine="701"/>
       </Position25>
       <Position26>
-        <Filename Value="iBiblia.lpr"/>
-        <Caret Line="26"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="726" Column="26" TopLine="701"/>
       </Position26>
       <Position27>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="692" TopLine="673"/>
+        <Caret Line="729" Column="53" TopLine="701"/>
       </Position27>
       <Position28>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="861" TopLine="842"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="733" Column="20" TopLine="701"/>
       </Position28>
       <Position29>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="499" TopLine="480"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="734" Column="21" TopLine="701"/>
       </Position29>
       <Position30>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="692" TopLine="673"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="29" Column="28" TopLine="9"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
