--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
-    <BuildModes Count="4" Active="Debug32">
+    <BuildModes Count="4" Active="Release32">
       <Item1 Name="Debug" Default="True"/>
       <Item2 Name="Release">
         <CompilerOptions>
@@ -135,12 +135,12 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="24">
+    <Units Count="25">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
-        <CursorPos Y="26"/>
+        <CursorPos Y="18"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -153,8 +153,8 @@
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="115"/>
-        <CursorPos X="48" Y="133"/>
+        <TopLine Value="569"/>
+        <CursorPos Y="588"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -163,11 +163,10 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="972"/>
-        <CursorPos X="36" Y="997"/>
+        <TopLine Value="332"/>
+        <CursorPos Y="351"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -192,8 +191,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="855"/>
-        <CursorPos Y="880"/>
+        <TopLine Value="2188"/>
+        <CursorPos X="5" Y="2226"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -402,10 +401,11 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="701"/>
-        <CursorPos X="17" Y="735"/>
+        <TopLine Value="444"/>
+        <CursorPos Y="479"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -418,127 +418,134 @@
         <CursorPos X="3" Y="396"/>
         <UsageCount Value="8"/>
       </Unit23>
+      <Unit24>
+        <Filename Value="C:\Users\rubio\AppData\Local\Temp\Rar$DIa0.812\frm1.pas"/>
+        <EditorIndex Value="-1"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="81"/>
+        <UsageCount Value="11"/>
+      </Unit24>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="969" Column="12" TopLine="947"/>
+        <Caret Line="1077" TopLine="1039"/>
       </Position1>
       <Position2>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="85" Column="24" TopLine="71"/>
+        <Caret Line="90" Column="15" TopLine="72"/>
       </Position2>
       <Position3>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="807" Column="31" TopLine="775"/>
+        <Caret Line="346" Column="28" TopLine="336"/>
       </Position3>
       <Position4>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="939" Column="12" TopLine="908"/>
+        <Caret Line="339" Column="3" TopLine="326"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="876" Column="74" TopLine="871"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="346" Column="8" TopLine="327"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="868" Column="47" TopLine="849"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="366" Column="5" TopLine="353"/>
       </Position6>
       <Position7>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1003" Column="25" TopLine="976"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="68" Column="5" TopLine="50"/>
       </Position7>
       <Position8>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="212" Column="5" TopLine="183"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="139" Column="15" TopLine="121"/>
       </Position8>
       <Position9>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="87" Column="15" TopLine="70"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="672" Column="3" TopLine="670"/>
       </Position9>
       <Position10>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="356" Column="23" TopLine="345"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="169" Column="16" TopLine="145"/>
       </Position10>
       <Position11>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="64" Column="15" TopLine="47"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="131" Column="15" TopLine="113"/>
       </Position11>
       <Position12>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="855" Column="3" TopLine="850"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="589" Column="26" TopLine="570"/>
       </Position12>
       <Position13>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="87" Column="15" TopLine="69"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="115" Column="15" TopLine="97"/>
       </Position13>
       <Position14>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="891" Column="29" TopLine="878"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="368" TopLine="366"/>
       </Position14>
       <Position15>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="977" Column="24" TopLine="945"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2209" Column="25" TopLine="2179"/>
       </Position15>
       <Position16>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="992" Column="26" TopLine="960"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="66" Column="29" TopLine="47"/>
       </Position16>
       <Position17>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="28" Column="30" TopLine="9"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2221" Column="36" TopLine="2185"/>
       </Position17>
       <Position18>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="627" Column="3" TopLine="625"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2218" Column="22" TopLine="2185"/>
       </Position18>
       <Position19>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="701" Column="16" TopLine="669"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="58" TopLine="58"/>
       </Position19>
       <Position20>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="703" Column="23" TopLine="671"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="140" Column="15" TopLine="122"/>
       </Position20>
       <Position21>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="708" Column="23" TopLine="676"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1383" TopLine="1350"/>
       </Position21>
       <Position22>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="713" Column="24" TopLine="681"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2226" Column="5" TopLine="2188"/>
       </Position22>
       <Position23>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="719" Column="52" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="353" TopLine="330"/>
       </Position23>
       <Position24>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="721" Column="26" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" Column="7" TopLine="321"/>
       </Position24>
       <Position25>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="724" Column="59" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="347" Column="10" TopLine="330"/>
       </Position25>
       <Position26>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="726" Column="26" TopLine="701"/>
+        <Caret Line="735" Column="17" TopLine="701"/>
       </Position26>
       <Position27>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="729" Column="53" TopLine="701"/>
+        <Caret Line="98" Column="15" TopLine="80"/>
       </Position27>
       <Position28>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="733" Column="20" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="351" Column="30" TopLine="332"/>
       </Position28>
       <Position29>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="734" Column="21" TopLine="701"/>
+        <Caret Line="573" Column="57" TopLine="554"/>
       </Position29>
       <Position30>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="29" Column="28" TopLine="9"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="91" Column="14" TopLine="74"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -581,7 +588,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1555"/>
+        <Line Value="1558"/>
       </Item2>
     </BreakPoints>
     <Watches Count="1">
