--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -140,7 +140,7 @@
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
-        <CursorPos Y="18"/>
+        <CursorPos Y="26"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -163,10 +163,11 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="332"/>
-        <CursorPos Y="351"/>
+        <TopLine Value="345"/>
+        <CursorPos X="6" Y="364"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -183,7 +184,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="142"/>
+        <UsageCount Value="141"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
@@ -192,7 +193,7 @@
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
         <TopLine Value="2188"/>
-        <CursorPos X="5" Y="2226"/>
+        <CursorPos X="34" Y="2222"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -282,7 +283,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="15"/>
+        <UsageCount Value="14"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -373,7 +374,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="55"/>
+        <UsageCount Value="54"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
@@ -392,8 +393,8 @@
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="231"/>
-        <CursorPos Y="256"/>
+        <TopLine Value="93"/>
+        <CursorPos Y="125"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit21>
@@ -401,11 +402,10 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="444"/>
-        <CursorPos Y="479"/>
+        <TopLine Value="461"/>
+        <CursorPos X="5" Y="463"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -416,7 +416,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="383"/>
         <CursorPos X="3" Y="396"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="7"/>
       </Unit23>
       <Unit24>
         <Filename Value="C:\Users\rubio\AppData\Local\Temp\Rar$DIa0.812\frm1.pas"/>
@@ -428,124 +428,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1077" TopLine="1039"/>
-      </Position1>
-      <Position2>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="90" Column="15" TopLine="72"/>
-      </Position2>
-      <Position3>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="346" Column="28" TopLine="336"/>
-      </Position3>
-      <Position4>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="339" Column="3" TopLine="326"/>
-      </Position4>
-      <Position5>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="346" Column="8" TopLine="327"/>
-      </Position5>
-      <Position6>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="366" Column="5" TopLine="353"/>
-      </Position6>
-      <Position7>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="68" Column="5" TopLine="50"/>
-      </Position7>
-      <Position8>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="139" Column="15" TopLine="121"/>
-      </Position8>
-      <Position9>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="672" Column="3" TopLine="670"/>
-      </Position9>
-      <Position10>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="169" Column="16" TopLine="145"/>
-      </Position10>
-      <Position11>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="131" Column="15" TopLine="113"/>
-      </Position11>
-      <Position12>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="589" Column="26" TopLine="570"/>
-      </Position12>
-      <Position13>
         <Filename Value="formprincipal.pas"/>
         <Caret Line="115" Column="15" TopLine="97"/>
-      </Position13>
-      <Position14>
+      </Position1>
+      <Position2>
         <Filename Value="formprincipal.pas"/>
         <Caret Line="368" TopLine="366"/>
-      </Position14>
-      <Position15>
+      </Position2>
+      <Position3>
         <Filename Value="projeto.pas"/>
         <Caret Line="2209" Column="25" TopLine="2179"/>
-      </Position15>
-      <Position16>
+      </Position3>
+      <Position4>
         <Filename Value="projeto.pas"/>
         <Caret Line="66" Column="29" TopLine="47"/>
-      </Position16>
-      <Position17>
+      </Position4>
+      <Position5>
         <Filename Value="projeto.pas"/>
         <Caret Line="2221" Column="36" TopLine="2185"/>
-      </Position17>
-      <Position18>
+      </Position5>
+      <Position6>
         <Filename Value="projeto.pas"/>
         <Caret Line="2218" Column="22" TopLine="2185"/>
-      </Position18>
-      <Position19>
+      </Position6>
+      <Position7>
         <Filename Value="projeto.pas"/>
         <Caret Line="58" TopLine="58"/>
-      </Position19>
-      <Position20>
+      </Position7>
+      <Position8>
         <Filename Value="projeto.pas"/>
         <Caret Line="140" Column="15" TopLine="122"/>
-      </Position20>
-      <Position21>
+      </Position8>
+      <Position9>
         <Filename Value="projeto.pas"/>
         <Caret Line="1383" TopLine="1350"/>
-      </Position21>
-      <Position22>
+      </Position9>
+      <Position10>
         <Filename Value="projeto.pas"/>
         <Caret Line="2226" Column="5" TopLine="2188"/>
-      </Position22>
-      <Position23>
+      </Position10>
+      <Position11>
         <Filename Value="versiculo.pas"/>
         <Caret Line="353" TopLine="330"/>
+      </Position11>
+      <Position12>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" Column="7" TopLine="321"/>
+      </Position12>
+      <Position13>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="347" Column="10" TopLine="330"/>
+      </Position13>
+      <Position14>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="735" Column="17" TopLine="701"/>
+      </Position14>
+      <Position15>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="98" Column="15" TopLine="80"/>
+      </Position15>
+      <Position16>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="351" Column="30" TopLine="332"/>
+      </Position16>
+      <Position17>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="573" Column="57" TopLine="554"/>
+      </Position17>
+      <Position18>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="91" Column="14" TopLine="74"/>
+      </Position18>
+      <Position19>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="457" Column="62" TopLine="444"/>
+      </Position19>
+      <Position20>
+        <Filename Value="ontparser.pas"/>
+        <Caret Line="256" TopLine="231"/>
+      </Position20>
+      <Position21>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="736" TopLine="698"/>
+      </Position21>
+      <Position22>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="93" Column="15" TopLine="76"/>
+      </Position22>
+      <Position23>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="463" Column="40" TopLine="461"/>
       </Position23>
       <Position24>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="354" Column="7" TopLine="321"/>
+        <Caret Line="342" Column="37" TopLine="332"/>
       </Position24>
       <Position25>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="347" Column="10" TopLine="330"/>
+        <Caret TopLine="133"/>
       </Position25>
       <Position26>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="735" Column="17" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1090" TopLine="910"/>
       </Position26>
       <Position27>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="98" Column="15" TopLine="80"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="90" Column="15" TopLine="72"/>
       </Position27>
       <Position28>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="351" Column="30" TopLine="332"/>
+        <Caret Line="336" Column="3" TopLine="328"/>
       </Position28>
       <Position29>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="573" Column="57" TopLine="554"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="91" Column="27" TopLine="72"/>
       </Position29>
       <Position30>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="91" Column="14" TopLine="74"/>
+        <Caret Line="463" Column="5" TopLine="461"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
