--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="43"/>
+      <BuildNr Value="45"/>
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
@@ -169,7 +169,8 @@
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <CursorPos X="68" Y="18"/>
+        <TopLine Value="387"/>
+        <CursorPos Y="399"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -192,10 +193,11 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="403"/>
-        <CursorPos X="3" Y="409"/>
+        <TopLine Value="1675"/>
+        <CursorPos Y="1688"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -274,8 +276,8 @@
         <UnitName Value="MemoVersiculo"/>
         <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="26"/>
-        <CursorPos Y="44"/>
+        <TopLine Value="39"/>
+        <CursorPos Y="53"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -303,7 +305,6 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <TopLine Value="45"/>
@@ -392,8 +393,8 @@
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="261"/>
-        <CursorPos Y="125"/>
+        <TopLine Value="275"/>
+        <CursorPos Y="291"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit21>
@@ -403,8 +404,8 @@
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="461"/>
-        <CursorPos X="5" Y="463"/>
+        <TopLine Value="696"/>
+        <CursorPos Y="709"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -427,124 +428,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="573" Column="57" TopLine="554"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1791" TopLine="1778"/>
       </Position1>
       <Position2>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="91" Column="14" TopLine="74"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1792" TopLine="1778"/>
       </Position2>
       <Position3>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="457" Column="62" TopLine="444"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1793" TopLine="1778"/>
       </Position3>
       <Position4>
-        <Filename Value="ontparser.pas"/>
-        <Caret Line="256" TopLine="231"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1795" TopLine="1778"/>
       </Position4>
       <Position5>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="736" TopLine="698"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1796" TopLine="1778"/>
       </Position5>
       <Position6>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="93" Column="15" TopLine="76"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1785" TopLine="1786"/>
       </Position6>
       <Position7>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="463" Column="40" TopLine="461"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1791" Column="16" TopLine="1778"/>
       </Position7>
       <Position8>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="342" Column="37" TopLine="332"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1785" TopLine="1781"/>
       </Position8>
       <Position9>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1090" TopLine="910"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1688" TopLine="1675"/>
       </Position9>
       <Position10>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="90" Column="15" TopLine="72"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1785" TopLine="1773"/>
       </Position10>
       <Position11>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="336" Column="3" TopLine="328"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1791" TopLine="1773"/>
       </Position11>
       <Position12>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="91" Column="27" TopLine="72"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="670" TopLine="657"/>
       </Position12>
       <Position13>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="463" Column="5" TopLine="461"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="668" Column="44" TopLine="657"/>
       </Position13>
       <Position14>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="580" Column="26" TopLine="569"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="672" TopLine="657"/>
       </Position14>
       <Position15>
-        <Filename Value="formnovoprojeto.pas"/>
-        <Caret Line="23" Column="67" TopLine="18"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="673" Column="56" TopLine="657"/>
       </Position15>
       <Position16>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="428" Column="67" TopLine="411"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="674" TopLine="657"/>
       </Position16>
       <Position17>
         <Filename Value="projeto.pas"/>
-        <Caret Line="216" TopLine="181"/>
+        <Caret Line="1792" TopLine="1780"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="266" Column="3" TopLine="239"/>
+        <Caret Line="1529" TopLine="1516"/>
       </Position18>
       <Position19>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1089" Column="86" TopLine="1058"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1530" TopLine="1516"/>
       </Position19>
       <Position20>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="429" Column="67" TopLine="413"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1531" TopLine="1516"/>
       </Position20>
       <Position21>
-        <Filename Value="memoversiculo.pas"/>
-        <Caret Line="44" TopLine="26"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1533" TopLine="1516"/>
       </Position21>
       <Position22>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="785" Column="3" TopLine="775"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1793" TopLine="1781"/>
       </Position22>
       <Position23>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="786" Column="3" TopLine="776"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1795" TopLine="1781"/>
       </Position23>
       <Position24>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="787" Column="3" TopLine="777"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1796" TopLine="1781"/>
       </Position24>
       <Position25>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="794" Column="3" TopLine="784"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1785" TopLine="1780"/>
       </Position25>
       <Position26>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="683" Column="24" TopLine="681"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1788" TopLine="1780"/>
       </Position26>
       <Position27>
         <Filename Value="projeto.pas"/>
-        <Caret Line="140" Column="16" TopLine="129"/>
+        <Caret Line="1791" TopLine="1780"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1443" Column="17" TopLine="1418"/>
+        <Caret Line="670" TopLine="657"/>
       </Position28>
       <Position29>
-        <Filename Value="twsyncthread.pas"/>
-        <Caret Line="44" TopLine="19"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="155" Column="15" TopLine="145"/>
       </Position29>
       <Position30>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="167" Column="22" TopLine="148"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1785" Column="51" TopLine="1782"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -574,7 +575,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
+    <BreakPoints Count="4">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -582,6 +583,27 @@
         <Source Value="PCRE.pas"/>
         <Line Value="1709"/>
       </Item1>
+      <Item2>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="projeto.pas"/>
+        <Line Value="888"/>
+      </Item2>
+      <Item3>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="versiculo.pas"/>
+        <Line Value="396"/>
+      </Item3>
+      <Item4>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="projeto.pas"/>
+        <Line Value="1688"/>
+      </Item4>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
